--- a/app/src/main/res/layout/fragment_collection.xml
+++ b/app/src/main/res/layout/fragment_collection.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,118 +8,162 @@
     tools:context=".ui.fragment.collection.CollectionFragment"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginTop="120dp"
+        android:background="@color/white"/>
 
-        <ImageView
-            android:id="@+id/collection_main_userImg_iv"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher_round"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/collection_main_userImg_iv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@mipmap/ic_launcher_round"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"/>
+
+            <TextView
+                android:id="@+id/collection_main_userName_tv"
+                android:layout_width="wrap_content"
+                android:text="王林"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:layout_toRightOf="@id/collection_main_userImg_iv"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/collection_main_userCity_tv"
+                android:layout_width="wrap_content"
+                android:text="杭州"
+                android:layout_marginLeft="10dp"
+                android:textSize="12sp"
+                android:layout_below="@id/collection_main_userName_tv"
+                android:textColor="@color/white"
+                android:layout_toRightOf="@id/collection_main_userImg_iv"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_height="100dp">
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_weight="15"
+                android:padding="5dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:elevation="5dp"
+                android:background="@color/white"
+                android:orientation="horizontal">
+
+
+                <ImageView
+                    android:id="@+id/collection_main_scenery_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="25dp"
+                    android:background="@drawable/collection_main_scenery_selector"
+                    android:layout_toLeftOf="@id/collection_main_museum_btn"
+                    android:layout_gravity="center" />
+
+                <ImageView
+                    android:id="@+id/collection_main_museum_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/collection_main_museum_selector"
+                    android:layout_marginLeft="35dp"
+                    android:layout_marginRight="35dp"
+                    android:layout_centerHorizontal="true"
+                     />
+
+                <ImageView
+                    android:id="@+id/collection_main_food_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/collection_main_food_selector"
+                    android:layout_marginLeft="25dp"
+                    android:layout_toRightOf="@id/collection_main_museum_btn" />
+
+                <TextView
+                    android:id="@+id/collection_main_scenery_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/collection_main_food_btn"
+                    android:layout_toLeftOf="@+id/collection_main_museum_text"
+                    android:layout_marginRight="75dp"
+                    android:text="@string/Scenery"
+                    android:textColor="@color/toolbar_bg" />
+
+                <TextView
+                    android:id="@+id/collection_main_museum_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/collection_main_food_btn"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/Museum"
+                    android:textColor="@color/toolbar_bg" />
+
+                <TextView
+                    android:id="@+id/collection_main_food_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/collection_main_food_btn"
+                    android:layout_toRightOf="@+id/collection_main_museum_text"
+                    android:text="@string/Food"
+                    android:layout_marginLeft="75dp"
+                    android:textColor="@color/toolbar_bg" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="1dp"/>
+        </LinearLayout>
+
 
         <TextView
-            android:id="@+id/collection_main_userName_tv"
+            android:id="@+id/collection_main_type_tv"
             android:layout_width="wrap_content"
-            android:text="Iron Man"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
+            android:text="@string/Scenery"
             android:textStyle="bold"
             android:textSize="20sp"
-            android:textColor="@color/white"
-            android:layout_toRightOf="@id/collection_main_userImg_iv"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/collection_main_userCity_tv"
-            android:layout_width="wrap_content"
-            android:text="Hang Zhou"
             android:layout_marginLeft="10dp"
-            android:textSize="12sp"
-            android:layout_below="@id/collection_main_userName_tv"
-            android:textColor="@color/white"
-            android:layout_toRightOf="@id/collection_main_userImg_iv"
+            android:layout_marginTop="20dp"
             android:layout_height="wrap_content" />
 
-    </RelativeLayout>
+        <ListView
+            android:id="@+id/collection_main_lv"
+            android:layout_width="match_parent"
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/personal_main_block_bg"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/collection_main_scenery_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center" />
-
-        <ImageButton
-            android:id="@+id/collection_main_museum_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="35dp"
-            android:layout_toRightOf="@id/collection_main_scenery_btn" />
-
-        <ImageButton
-            android:id="@+id/collection_main_food_btn"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="35dp"
-            android:layout_toRightOf="@id/collection_main_museum_btn" />
-
-        <TextView
-            android:id="@+id/collection_main_scenery_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/collection_main_food_btn"
-            android:layout_marginLeft="15dp"
-            android:text="@string/Scenery"
-            android:textColor="@color/text_color" />
-
-        <TextView
-            android:id="@+id/collection_main_museum_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/collection_main_food_btn"
-            android:layout_centerHorizontal="true"
-            android:text="@string/Museum"
-            android:textColor="@color/text_color" />
-
-        <TextView
-            android:id="@+id/collection_main_food_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/collection_main_food_btn"
-            android:layout_marginLeft="205dp"
-            android:text="@string/Food"
-            android:textColor="@color/text_color" />
-
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/collection_main_type_tv"
-        android:layout_width="wrap_content"
-        android:text="@string/Scenery"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content" />
-
-    <ListView
-        android:id="@+id/collection_main_lv"
-        android:layout_width="match_parent"
-
-        android:layout_height="match_parent"></ListView>
+            android:layout_height="match_parent"></ListView>
+    </LinearLayout>
 
 
 
-</LinearLayout>
+
+
+</FrameLayout>
