--- a/app/src/main/res/layout/login_signin_activity.xml
+++ b/app/src/main/res/layout/login_signin_activity.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:visibility="gone"
         android:text="@string/change_language"/>
 
     <TextView
